# advent-of-code-2021

./: .gitignore  .gitpod.yml  Cargo.toml
.github/workflows/: conventional-commits.yml  reuse.yml
src/: lib.rs  main.rs  utils.rs
src/day1/: mod.rs  part1.rs  part2.rs
src/day2/: part1.rs  part2.rs
src/day3/: part1.rs  part2.rs
src/day4/: mod.rs  part1.rs  part2.rs  utils.rs
src/day5/: mod.rs  part1.rs  part2.rs  utils.rs
src/day6/: part1.rs  part2.rs  utils.rs
src/day7/: mod.rs  part1.rs  part2.rs  utils.rs
src/day8/: part1.rs  part2.rs
