# Copyright (C) 2021 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# Optimize the dev build the same as release builds
[profile.dev]
opt-level = 3

# Optimize the test build the same as release builds
[profile.test]
opt-level = 3

[dependencies]
array2d = "0.2"
